--- a/SLR_Clean.ipynb
+++ b/SLR_Clean.ipynb
@@ -569,8 +569,10 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "a4355220",
-   "metadata": {},
+   "id": "4e565383",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -638,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "7d4c0dd3",
+   "id": "982e0745",
    "metadata": {},
    "outputs": [
     {
@@ -653,15 +655,13 @@
     }
    ],
    "source": [
-    "np.mean(GrIS_fingerprint_rot[0:N,0:2*N]-GrIS_fingerprint[0:N,0:2*N])\n",
-    "# print(np.mean(WAIS_fingerprint_rot[0:N,0:2*N]-WAIS_fingerprint[0:N,0:2*N]))\n",
-    "# print(np.mean(CONT_fingerprint_rot[0:N,0:2*N]-CONT_fingerprint[0:N,0:2*N]))"
+    "np.mean(GrIS_fingerprint_rot[0:N,0:2*N]-GrIS_fingerprint[0:N,0:2*N])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd7b974e",
+   "id": "4adb2361",
    "metadata": {},
    "outputs": [],
    "source": []
