--- a/SLR_Clean.ipynb
+++ b/SLR_Clean.ipynb
@@ -592,7 +592,8 @@
     "    ax[n].contour(lon_out, lat_out,np.fliplr(np.flip(topo_pres_plot)),levels=[0])\n",
     "    ax[n].set_title(f'{TITLES[n]} Sea Level Change', fontsize = 16)\n",
     "plt.savefig(f'plots/RCP Scenarios 2100 Melt.png')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n"
    ]
   }
  ],
